# extract_exif

./: README.md  app.py  pyproject.toml
src/extract_exif/: cli.py  proc.py  reader.py
