[project]
name = "extract-exif"
description = "jpeg写真からexif情報を取得するツール群"
dynamic = ["version"]
authors = [
    { name = "Shinichi Kanehira", email = "skanehir1126@gmail.com" }
]
dependencies = [
    "pillow",
    "pandas",
    "tqdm",
    "streamlit",
    "numpy",
    "opencv-python",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/extract_exif/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/extract_exif"]

[project.scripts]
extract-exif = "extract_exif:cli.cli"

